--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,9 @@
 {
+  "tabWidth": 2,
+  "printWidth": 80,
+  "endOfLine": "auto",
+  "semi": true,
+  "useTabs": false,
   "singleQuote": true,
-  "trailingComma": "all"
+  "bracketSpacing": true
 }
