--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,10 @@
     "noImplicitAny": false,
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
-    "noFallthroughCasesInSwitch": false
+    "noFallthroughCasesInSwitch": false,
+    "paths": {
+      "@app/*": ["src/*"]
+    }
   },
   "ts-node": {
     "require": ["tsconfig-paths/register"]
