fixing command db packagejson, readme migration db, image relation with product must contain order

--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "db:seeder": "ts-node ./dist/database/seed-runner.js",
-    "db:generate": "npx ts-node -P ./tsconfig.json -r tsconfig-paths/register ./node_modules/typeorm/cli.js migration:generate -d ./src/database/orm.config.ts ./dist/database",
+    "db:seeder": "ts-node ./dist/src/database/seed-runner.js",
+    "db:generate": "npx ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js migration:generate -d src/database/orm.config.ts migrations/InitialMigration",
     "db:dropall": "npx typeorm schema:drop -d ./dist/database/orm.config.js",
-    "db:create": "npx typeorm migration:run -d ./dist/database/orm.config.js",
+    "db:runMigration": "npx ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js migration:run -d src/database/orm.config.ts",
     "db:createDB": "ts-node src/database/create-database.ts",
     "db:sync": "npx typeorm schema:sync -d ./dist/database/orm.config.js",
     "db:start": "docker-compose up -d",
