--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "db:seeder": "ts-node ./dist/src/database/seed-runner.js",
     "db:generate": "npx ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js migration:generate -d src/database/orm.config.ts migrations/InitialMigration",
-    "db:dropall": "npx typeorm schema:drop -d ./dist/database/orm.config.js",
+    "db:dropall": "npx typeorm schema:drop -d ./dist/src/database/orm.config.js",
     "db:runMigration": "npx ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js migration:run -d src/database/orm.config.ts",
     "db:createDB": "ts-node src/database/create-database.ts",
     "db:sync": "npx typeorm schema:sync -d ./dist/database/orm.config.js",
